--- a/popup.kv
+++ b/popup.kv
@@ -2,7 +2,13 @@
 
 <MyPopup@Popup>
     auto_dismiss: False
+    size_hint: 0.6, 0.4
+    pos_hint: {"x":0.2, "top":0.9}
     title: "Popup Box"
+    Button:
+        text: "Quit"
+        font_size: 24
+        on_release: root.dismiss()
 
 <MyLayout>
     BoxLayout:
@@ -14,6 +20,6 @@
             font_size: 32
 
         Button:
-            text: "Dismiss"
+            text: "Show PopUp"
             font_size: 32
             on_release: Factory.MyPopup().open()
