--- a/popup.kv
+++ b/popup.kv
@@ -1,7 +1,7 @@
 #: import Factory kivy.factory.Factory
 
 <MyPopup@Popup>
-    auto_dismiss: False
+    auto_dismiss: True
     size_hint: 0.6, 0.4
     pos_hint: {"x":0.2, "top":0.9}
 
